# email-spam-classification

./: .env.example  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
app/: streamlit_app.py
common/: __init__.py  config.py  download_data.py  features.py  io_utils.py  preprocess.py
data/: README.md
docs/superpowers/plans/: 2026-07-02-repo-scaffolding.md  2026-07-03-v1-implementation.md
docs/superpowers/specs/: 2026-07-01-email-spam-v1-design.md  2026-07-02-email-spam-v2-design.md  2026-07-02-email-spam-v3-design.md  2026-07-02-email-spam-v4-design.md
experiments/hard_dataset_eval/: run.py
tests/: test_batch_v4.py  test_error_analysis_v3.py  test_evaluate_v1.py  test_explain_v4.py  test_features_v2.py  test_io_utils_v1.py  test_predict_v1.py  test_preprocess_v1.py  test_threshold_v3.py  test_train_v1.py  test_v2_pipeline.py
v1_basic_pipeline/: README.md  __init__.py  evaluate.py  main.py  predict.py  train.py
v1_basic_pipeline/reports/: metrics.json  model_comparison.csv
v2_feature_engineering/: README.md  __init__.py  evaluate.py  main.py  predict.py  train.py
v2_feature_engineering/reports/: feature_summary.md  metrics_v2.json  model_comparison.csv
v3_model_comparison_tuning/: README.md  __init__.py  error_analysis.py  evaluate.py  main.py  predict.py  threshold.py  train.py
v3_model_comparison_tuning/reports/: error_analysis.md  false_negatives.csv  false_positives.csv  metrics_v3.json  model_comparison.csv  threshold_analysis.csv
v4_streamlit_app/: README.md  __init__.py  batch.py  explain.py  feedback.py  main.py
(+2 files in other folders)
