[project]
name = "email-spam-classification"
version = "0.1.0"
description = "Progressive versions of an email spam risk triage system (v1-v4)"
authors = [{name = "exoxeph", email = "imtiazmashrafee@gmail.com"}]
requires-python = ">=3.11,<4.0"
dependencies = [
    "scikit-learn (>=1.5,<2.0)",
    "pandas (>=2.2,<3.0)",
    "numpy (>=1.26,<2.0)",
    "joblib (>=1.4,<2.0)",
    "kagglehub (>=0.3,<0.4)",
    "matplotlib (>=3.9,<4.0)",
    "streamlit (>=1.38,<2.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
